# tauri-plugin-system-info

./: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  tsconfig.json
.changes/: V1.0.md  config.json  initial-release.md  readme.md
.github/: FUNDING.yml
.github/workflows/: audit.yml  clippy.yml  docs.yml  test.yml
dist-js/: api.d.ts  api.d.ts.map  index.cjs  index.d.ts.map  index.js  type.d.ts  type.d.ts.map
examples/sveltekit/: README.md  package.json  pnpm-lock.yaml
examples/sveltekit/src-tauri/: Cargo.toml  tauri.conf.json
examples/sveltekit/src-tauri/capabilities/: default.json
examples/sveltekit/src-tauri/src/: lib.rs  main.rs
examples/sveltekit/src/routes/: +layout.svelte  +page.svelte
guest-js/: api.ts  type.ts
permissions/: all.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: all_sys_info.toml  batteries.toml  components.toml  cpu_count.toml  cpu_info.toml  cpus.toml  disks.toml  kernel_version.toml  memory_info.toml  name.toml  networks.toml  os_version.toml  processes.toml  refresh_all.toml  refresh_cpu.toml  refresh_memory.toml  refresh_processes.toml  static_info.toml  total_memory.toml  total_swap.toml  used_memory.toml  used_swap.toml
permissions/schemas/: schema.json
src/: desktop.rs  lib.rs  mobile.rs
src/commands/: battery.rs  component.rs  cpu.rs  disk.rs  memory.rs  mod.rs  network.rs  process.rs  refresh.rs  static_info.rs
src/model/: aggregate.rs  common.rs  mod.rs
src/utils/: mod.rs  sysinfo.rs
webview-dist/: api.d.ts  api.d.ts.map  index.d.ts  index.d.ts.map  index.js  type.d.ts  type.d.ts.map
webview-src/: api.ts  index.ts  tsconfig.json  type.ts
